; ModuleID = '/home/carl/AnghaBench/linux/sound/x86/extr_intel_hdmi_audio.c_had_invalidate_bd.c'
source_filename = "/home/carl/AnghaBench/linux/sound/x86/extr_intel_hdmi_audio.c_had_invalidate_bd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_intelhad = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_intelhad*, i32)* @had_invalidate_bd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @had_invalidate_bd(%struct.snd_intelhad* %0, i32 %1) #0 {
  %3 = alloca %struct.snd_intelhad*, align 8
  %4 = alloca i32, align 4
  store %struct.snd_intelhad* %0, %struct.snd_intelhad** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.snd_intelhad*, %struct.snd_intelhad** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @AUD_BUF_ADDR(i32 %6)
  %8 = call i32 @had_write_register(%struct.snd_intelhad* %5, i32 %7, i32 0)
  %9 = load %struct.snd_intelhad*, %struct.snd_intelhad** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @AUD_BUF_LEN(i32 %10)
  %12 = call i32 @had_write_register(%struct.snd_intelhad* %9, i32 %11, i32 0)
  ret void
}

declare dso_local i32 @had_write_register(%struct.snd_intelhad*, i32, i32) #1

declare dso_local i32 @AUD_BUF_ADDR(i32) #1

declare dso_local i32 @AUD_BUF_LEN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
